# Project_rikirobot

./: .gitignore  README.md
src/depth_camera/depthimage_to_laserscan/cfg/: Depth.cfg
src/depth_camera/depthimage_to_laserscan/src/: DepthImageToLaserScan.cpp  DepthImageToLaserScanROS.cpp
src/imu_filter_madgwick/include/imu_filter_madgwick/: imu_filter_ros.h
src/imu_filter_madgwick/src/: imu_filter_ros.cpp
src/opencv_apps/launch/: camshift.launch  contour_moments.launch  convex_hull.launch  discrete_fourier_transform.launch  edge_detection.launch  face_detection.launch  face_recognition.launch  fback_flow.launch  find_contours.launch  general_contours.launch  goodfeature_track.launch  hls_color_filter.launch  hough_circles.launch  hough_lines.launch  hsv_color_filter.launch  lk_flow.launch  people_detect.launch  phase_corr.launch  pyramids.launch  rgb_color_filter.launch  segment_objects.launch  simple_flow.launch  smoothing.launch  threshold.launch  watershed_segmentation.launch
src/rikirobot_project/: .gitmodules  README.md
src/rikirobot_project/riki_follower/: CMakeLists.txt  package.xml
src/rikirobot_project/riki_follower/cfg/: Follower.cfg
src/rikirobot_project/riki_follower/launch/: follower.launch  kinect_follower.launch  precipio_follower.launch
src/rikirobot_project/riki_follower/plugins/: nodelets.xml
src/rikirobot_project/riki_follower/src/: follower.cpp
src/rikirobot_project/riki_lidar_follower/: CMakeLists.txt  package.xml
src/rikirobot_project/riki_lidar_follower/launch/: laser_follower.launch
src/rikirobot_project/riki_lidar_follower/launch/nodes/: follower.launch  laserTracker.launch
src/rikirobot_project/riki_lidar_follower/scripts/: follower.py  laserTracker.py  visualTracker.py
src/rikirobot_project/riki_line_follower/src/: linedetect.cpp  rikirobot.cpp
src/rikirobot_project/riki_msgs/msg/: Battery.msg
src/rikirobot_project/rikirobot/: CMakeLists.txt  package.xml
src/rikirobot_project/rikirobot/include/: riki_base.h
src/rikirobot_project/rikirobot/launch/: auto_slam.launch  bringup.launch  camera.launch  display_rikirobot_urdf.launch  hector_slam.launch  karto_slam.launch  lidar_slam.launch  move_base.launch  multi_goals.launch  navigate_multi.launch
src/rikirobot_project/rikirobot/maps/: house.yaml
src/rikirobot_project/rikirobot/rviz/: rikirobot_urdf.rviz
src/rikirobot_project/rikirobot/src/: riki_base.cpp
src/rikirobot_project/rikirobot_apps/: CMakeLists.txt  README.md  package.xml
src/teleop/teleop_twist_keyboard/: teleop_twist_keyboard.py
(+13 files in other folders)
